--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.12.2"
